packages/svelte/tests/compiler-errors/samples/comment-unclosed/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'unexpected-eof',
		message: 'Unexpected end of input (expected -->)',
		position: [24, 24]
	}
});
